[gd_scene load_steps=32 format=3 uid="uid://b250bg1ysk5dk"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ci0lx"]
[ext_resource type="PackedScene" uid="uid://cyg1avbtmwoj7" path="res://scenes/hud.tscn" id="2_g7hwg"]
[ext_resource type="Script" path="res://scripts/room_walls.gd" id="3_j38kx"]
[ext_resource type="PackedScene" uid="uid://dwwjje64opjab" path="res://scenes/game_over_screen.tscn" id="3_km7re"]
[ext_resource type="PackedScene" uid="uid://lp3n1ckd77bd" path="res://scenes/border_wall.tscn" id="4_60muw"]
[ext_resource type="PackedScene" uid="uid://3st5s0ue3nj4" path="res://scenes/pause_menu.tscn" id="4_kawko"]
[ext_resource type="PackedScene" uid="uid://baewtdko3xodj" path="res://scenes/planets.tscn" id="4_rjtw3"]
[ext_resource type="PackedScene" uid="uid://1wnfmblulhx0" path="res://scenes/player.tscn" id="4_s6h4r"]
[ext_resource type="PackedScene" uid="uid://ckljagn7r5mq7" path="res://scenes/hostiles.tscn" id="7_44k7l"]
[ext_resource type="PackedScene" uid="uid://bxpqhkwbma8la" path="res://scenes/player_spawn_area.tscn" id="7_f44yg"]
[ext_resource type="PackedScene" uid="uid://be1sbec7mtn51" path="res://scenes/sun.tscn" id="9_2srcp"]
[ext_resource type="PackedScene" uid="uid://oexei8cmm0yk" path="res://scenes/starbase.tscn" id="9_y1jbs"]
[ext_resource type="PackedScene" uid="uid://bv6xjhovoan8e" path="res://scenes/star_background.tscn" id="10_mj5ek"]
[ext_resource type="PackedScene" uid="uid://bjyudwfkjlxe5" path="res://scenes/mini_map.tscn" id="13_pwbrs"]
[ext_resource type="Script" path="res://scripts/menu_state_manager.gd" id="14_nkpvs"]
[ext_resource type="PackedScene" uid="uid://do3osaer0ntc8" path="res://missions_UI.tscn" id="16_b2vtt"]
[ext_resource type="PackedScene" uid="uid://dm6q0abakck7u" path="res://scenes/joystick.tscn" id="16_cqedu"]
[ext_resource type="PackedScene" uid="uid://cx1bafifkl17x" path="res://scenes/galaxy_map.tscn" id="16_wq6qh"]
[ext_resource type="AudioStream" uid="uid://cfxbnu633tts8" path="res://assets/audio/UI/computerbeep_01.ogg" id="20_hc8pw"]
[ext_resource type="PackedScene" uid="uid://b3ruu3xegfccq" path="res://scenes/ship_selection_menu.tscn" id="21_hxbij"]
[ext_resource type="AudioStream" uid="uid://cysx5glse4juw" path="res://assets/audio/UI/computerbeep_02.ogg" id="21_j65hg"]
[ext_resource type="AudioStream" uid="uid://e83vek1b24w3" path="res://assets/audio/UI/computerbeep_03.ogg" id="22_6tdsp"]

[sub_resource type="Animation" id="Animation_2b4ug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0pgod"]
resource_name = "fade_in_long"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_arcv3"]
resource_name = "fade_in_short"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d1ssx"]
resource_name = "fade_in_video"
length = 2.0

[sub_resource type="Animation" id="Animation_7aag7"]
resource_name = "fade_out_long"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oc86j"]
resource_name = "fade_out_short"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_lmvo2"]
resource_name = "galaxy_travel_fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2hu8d"]
_data = {
"RESET": SubResource("Animation_2b4ug"),
"fade_in_long": SubResource("Animation_0pgod"),
"fade_in_short": SubResource("Animation_arcv3"),
"fade_in_video": SubResource("Animation_d1ssx"),
"fade_out_long": SubResource("Animation_7aag7"),
"fade_out_short": SubResource("Animation_oc86j"),
"galaxy_travel_fade_out": SubResource("Animation_lmvo2")
}

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_1xcu0"]
file = "res://assets/video/warp_video long.ogv"

[node name="Game" type="Node2D"]
script = ExtResource("1_ci0lx")

[node name="Level" type="Node" parent="."]

[node name="levelBorders" type="Node2D" parent="Level"]
script = ExtResource("3_j38kx")
WallScene = ExtResource("4_60muw")

[node name="Planets" parent="Level" instance=ExtResource("4_rjtw3")]

[node name="Starbase" parent="Level" instance=ExtResource("9_y1jbs")]
position = Vector2(76, 17)

[node name="PlayerSpawnArea" parent="Level" groups=["player_spawn_area"] instance=ExtResource("7_f44yg")]
position = Vector2(1110, 585)
collision_mask = 6

[node name="Sun" parent="Level" instance=ExtResource("9_2srcp")]

[node name="Hostiles" parent="Level" instance=ExtResource("7_44k7l")]

[node name="Player" parent="Level" instance=ExtResource("4_s6h4r")]
unique_name_in_owner = true
z_index = 2
position = Vector2(1110, 585)

[node name="StarBackground" parent="." instance=ExtResource("10_mj5ek")]

[node name="HUD_layer" type="CanvasLayer" parent="."]

[node name="MiniMap" parent="HUD_layer" instance=ExtResource("13_pwbrs")]

[node name="HUD" parent="HUD_layer" instance=ExtResource("2_g7hwg")]

[node name="Joystick" parent="HUD_layer" instance=ExtResource("16_cqedu")]
visible = false
offset_left = 89.0
offset_top = 469.0
offset_right = 89.0
offset_bottom = 469.0

[node name="Missions" parent="HUD_layer" instance=ExtResource("16_b2vtt")]

[node name="CanvasModulate" type="CanvasModulate" parent="HUD_layer"]
unique_name_in_owner = true

[node name="Menus" type="CanvasLayer" parent="."]
script = ExtResource("14_nkpvs")

[node name="GameOverScreen" parent="Menus" instance=ExtResource("3_km7re")]
visible = false
z_index = 1

[node name="PauseMenu" parent="Menus" instance=ExtResource("4_kawko")]
visible = false

[node name="GalaxyMap" parent="Menus" instance=ExtResource("16_wq6qh")]
visible = false

[node name="ShipSelectionMenu" parent="Menus" instance=ExtResource("21_hxbij")]
visible = false

[node name="transition_overlay" type="CanvasLayer" parent="."]

[node name="FadeAnimation" type="ColorRect" parent="transition_overlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="transition_overlay"]
unique_name_in_owner = true
root_node = NodePath("../FadeAnimation")
libraries = {
"": SubResource("AnimationLibrary_2hu8d")
}

[node name="Video_layer" type="CanvasLayer" parent="."]

[node name="warp_video" type="VideoStreamPlayer" parent="Video_layer"]
unique_name_in_owner = true
offset_right = 960.0
offset_bottom = 544.0
mouse_filter = 2
stream = SubResource("VideoStreamTheora_1xcu0")
loop = true

[node name="VidModulate" type="CanvasModulate" parent="Video_layer"]
unique_name_in_owner = true
color = Color(1, 1, 1, 0)

[node name="Audio" type="Node" parent="."]

[node name="Click01" type="AudioStreamPlayer" parent="Audio" groups=["click_sound"]]
stream = ExtResource("20_hc8pw")
volume_db = -5.0
mix_target = 2
max_polyphony = 2

[node name="Click02" type="AudioStreamPlayer" parent="Audio" groups=["click_sound"]]
stream = ExtResource("21_j65hg")
volume_db = -13.5
mix_target = 2
max_polyphony = 2

[node name="Click03" type="AudioStreamPlayer" parent="Audio" groups=["click_sound"]]
stream = ExtResource("22_6tdsp")
volume_db = -20.0
mix_target = 2
max_polyphony = 2

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="Level" to="." method="_on_level_ready"]
